# infergen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PRD.md  README.md  ROADMAP.md  deny.toml  package.json  pnpm-lock.yaml  release.toml
.claude/commands/: dapprove.md  dplan.md  dqa.md  dstart.md
.github/workflows/: ci.yml  publish-npm.yml  release.yml
crates/infergen-cli/: Cargo.toml
crates/infergen-cli/src/: cli.rs  main.rs
crates/infergen-cli/src/commands/: check.rs  generate.rs  init.rs  manifest.rs  mod.rs  plugin.rs  review.rs  scan.rs  schema.rs  stubs.rs  view.html  view.rs  watch.rs
crates/infergen-cli/tests/: cli.rs
crates/infergen-core/: Cargo.toml
crates/infergen-core/src/: cache.rs  catalog.rs  config.rs  detect.rs  lib.rs  manifest.rs  migration.rs  monorepo.rs  plugin.rs  templates.rs
crates/infergen-core/src/adapter/: django.rs  echo.rs  express.rs  fastapi.rs  flask.rs  gin.rs  mod.rs  nestjs.rs  nethttp.rs  nextjs.rs  rails.rs  react_router.rs  svelte_kit.rs  vue.rs
crates/infergen-core/src/codegen/: consent.rs  delivery.rs  go_gen.rs  mod.rs  python.rs  ruby_gen.rs
crates/infergen-core/src/flow/: mod.rs  name_grouper.rs  patterns.rs  refiner.rs  route_grouper.rs
crates/infergen-core/src/linter/: mod.rs
crates/infergen-core/src/llm/: config.rs  mod.rs  prompt.rs  refine.rs
crates/infergen-core/src/llm/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/infergen-core/src/namer/: mod.rs
crates/infergen-core/src/parser/: go.rs  js.rs  mod.rs  py.rs  ruby.rs  svelte.rs  vue.rs
crates/infergen-core/src/property/: mod.rs
crates/infergen-core/src/provider/: mod.rs
crates/infergen-core/src/quality/: mod.rs
crates/infergen-core/src/review/: mod.rs
crates/infergen-core/src/schema/: mod.rs
crates/infergen-core/templates/django/: snippet.py
crates/infergen-core/templates/echo/: catalog.yaml  snippet.go
crates/infergen-core/templates/express/: catalog.yaml  snippet.ts
crates/infergen-core/templates/fastapi/: catalog.yaml  snippet.py
crates/infergen-core/templates/flask/: catalog.yaml  snippet.py
crates/infergen-core/templates/generic/: catalog.yaml  snippet.txt
crates/infergen-core/templates/gin/: catalog.yaml  snippet.go
crates/infergen-core/templates/nestjs/: catalog.yaml  snippet.ts
crates/infergen-core/templates/nextjs/: catalog.yaml  snippet.ts
crates/infergen-core/templates/rails/: catalog.yaml  snippet.rb
crates/infergen-core/templates/sveltekit/: catalog.yaml  snippet.ts
crates/infergen-core/templates/vue/: catalog.yaml  snippet.ts
crates/infergen-core/tests/: cache.rs  catalog.rs  codegen.rs  codegen_snapshots.rs  delivery.rs  go_parser.rs  golden.rs  js_frameworks.rs  js_parser.rs  linter.rs  manifest.rs  monorepo.rs  namer.rs  property.rs  provider.rs  py_parser.rs  review.rs  ruby_parser.rs  schema.rs
crates/infergen-core/tests/fixtures/catalog/: e2e_catalog.yaml
crates/infergen-core/tests/fixtures/django/: views.py
crates/infergen-core/tests/fixtures/express/: routes.ts
crates/infergen-core/tests/fixtures/fastapi/: main.py
crates/infergen-core/tests/fixtures/nextjs/pages/: index.tsx
crates/infergen-core/tests/fixtures/nextjs/pages/api/: users.ts
crates/infergen-core/tests/fixtures/rails/config/: routes.rb
crates/infergen-core/tests/snapshots/: codegen_snapshots__go_codegen_full_snapshot.snap  codegen_snapshots__python_codegen_full_snapshot.snap  codegen_snapshots__ruby_codegen_full_snapshot.snap  codegen_snapshots__typescript_codegen_full_snapshot.snap
crates/infergen-types/: Cargo.toml
crates/infergen-types/src/: lib.rs
crates/telemetra-cli/: Cargo.toml
crates/telemetra-cli/src/: main.rs
crates/telemetra-cli/tests/: cli.rs
crates/telemetra-core/: Cargo.toml
crates/telemetra-core/src/: lib.rs
crates/telemetra-types/: Cargo.toml
crates/telemetra-types/src/: lib.rs
docs/: e0.1-project-scaffold-monorepo-plan.md  e0.1-qa-report.md  e0.2-cli-skeleton-config-plan.md  e0.2-qa-report.md  e0.3-qa-report.md  e0.3-ts-js-ast-parser-integration-plan.md  e0.4-nextjs-adapter-vertical-slice-plan.md  e0.4-qa-report.md  e1.1-event-catalog-schema-store-plan.md  e1.1-qa-report.md  e1.2-heuristic-event-namer-plan.md  e1.2-qa-report.md  e1.3-naming-convention-engine-linter-plan.md  e1.3-qa-report.md  e1.4-property-type-inference-plan.md  e1.4-qa-report.md  e1.5-qa-report.md  e1.5-review-workflow-plan.md  e2.1-qa-report.md  e2.1-typescript-codegen-plan.md  e2.2-generated-sdk-ergonomics-plan.md  e2.2-qa-report.md  e2.3-codegen-determinism-safety-plan.md  e2.3-qa-report.md  e3.1-provider-plugin-interface-plan.md  e3.1-qa-report.md  e3.2-first-party-provider-adapters-plan.md  e3.2-qa-report.md  e3.2b-database-destination-adapter-plan.md  e3.2b-qa-report.md  e3.3-delivery-engine-plan.md  e3.3-qa-report.md  e3.4-consent-pii-controls-plan.md  e3.4-qa-report.md  e4.1-incremental-rescan-merge-plan.md  e4.1-qa-report.md  e4.2-drift-detection-scan-check-plan.md  e4.2-qa-report.md  e4.3-qa-report.md  e4.3-watch-mode-plan.md  (+42 more)
docs/ci-recipes/: circleci.yml  github-actions.yml  gitlab-ci.yml
docs/site/: adapter-gallery.md  catalog-schema.md  cli-reference.md  config-reference.md  index.md
examples/django-app/: README.md  infergen.config.json
examples/django-app/.infergen/: catalog.yaml
examples/express-app/: README.md  infergen.config.json  package.json
examples/nextjs-app/: README.md  infergen.config.json  package.json
examples/rails-app/: Gemfile  README.md  infergen.config.json
scripts/: bump-version.sh
