[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/infergen/infergen"
authors = ["Infergen contributors"]

[workspace.dependencies]
# Internal crates
infergen-types = { path = "crates/infergen-types", version = "0.0.0" }
infergen-core  = { path = "crates/infergen-core", version = "0.0.0" }
# External
clap      = { version = "4.5", features = ["derive"] }
anyhow    = "1.0"
thiserror = "2.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml       = "0.8"
# Dev-only (testing): temp dirs for config/detection/integration tests.
tempfile   = "3"
# OXC: TS/JS AST parser (E0.3). All sub-crates must share the same version.
oxc_allocator = "0.134"
oxc_parser    = "0.134"
oxc_ast       = "0.134"
oxc_span      = "0.134"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[profile.dist]
inherits = "release"
lto = "thin"
