[package]
name = "infergen-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Infergen command-line interface."

[[bin]]
name = "infergen"
path = "src/main.rs"

[dependencies]
infergen-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rayon      = { workspace = true }
notify = "6"
open   = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
