[package]
name = "infergen-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Infergen scan engine: language parsers, framework adapters, namer, codegen."

[dependencies]
infergen-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
