[package]
name = "infergen-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared, dependency-free domain types for Infergen (catalog schema versioning, etc.)."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }

[lints]
workspace = true
